# Atiam_UTC_internship_codes

./: README.md
PM1_solver_C++_cartography/: CMakeLists.txt  Modele_larynx.ipynb  simulation_parameters.ipynb  simulations_analysis.ipynb
PM1_solver_C++_cartography/include/: GaussQuadrature.h  PHSModel.h  VocGSI.h  h5readwrite.h  hello.h  helloConfig.h  helloConfig.h.in  matplotlibcpp.h  solver.h
PM1_solver_C++_cartography/include/hdfql/: HDFql.h  HDFql.hpp  HDFqlConstants.h  HDFqlStructures.h
PM1_solver_C++_cartography/src/: Cartography.cpp  GaussQuadrature.cpp  PHSModel.cpp  RLC.cpp  VocGSI.cpp  VocalApparatus.cpp  h5readwrite.cpp  hello.cpp  solver.cpp
Solver_PM_DAE_constraints_Vocal_Tract_Wetzel/: Articulation.py  Results_analysis_dirac.ipynb  Results_analysis_vowels.ipynb  Simulations.ipynb  tests_constraints.ipynb
Solver_PM_DAE_constraints_Vocal_Tract_Wetzel/models/: __init__.py  models.py  non_causals_examples_models.py  vocal_apparatus.py  vocal_tract.py
Solver_PM_DAE_constraints_Vocal_Tract_Wetzel/models/pyphsModels/: __init__.py  examples.py  modelspyphs.py  vocal_apparatus_model_pyphs.py  vocal_tract_pyphs.py
Solver_PM_DAE_constraints_Vocal_Tract_Wetzel/rpm_solver/: __init__.py  adc_dac.py  basis.py  helper_plot.py  quadrature.py  solver.py
Solver_RPM_ODE_regularisation/: RPM_ODE.html  RPM_ODE.ipynb
Solver_RPM_ODE_regularisation/PH_models/: __init__.py
Solver_RPM_ODE_regularisation/PH_models/example_muller/: LC_circuit.py  __init__.py
Solver_RPM_ODE_regularisation/rpm_module/: __init__.py  rpm.py
Solver_RPM_ODE_regularisation/rpm_module/basis_functions/: __init__.py  basis.py  test.ipynb
Solver_RPM_ODE_regularisation/rpm_module/dac_adc/: input_resonstruction.py
Solver_RPM_ODE_regularisation/rpm_module/gradient_projection/: __init__.py  proj_grad.py
Solver_RPM_ODE_regularisation/rpm_module/hamiltonian/: __init__.py  hamiltonian.py
Solver_RPM_ODE_regularisation/rpm_module/helper_plot/: __init__.py  helper_plots.py
Solver_RPM_ODE_regularisation/rpm_module/numerical_integration/: __init__.py  glquadrature.py
Solver_RPM_ODE_regularisation/rpm_module/phs_structure/: __init__.py  structure.py
Solver_discrete_gradient_chiemsee_summer_school/: exercises.ipynb  exercises_booklet_phs_risse.html  phs_simulator.py  utility_Phs.py
Solver_discrete_gradient_chiemsee_summer_school/images/: exercise1.drawio
